# fastapi-supabase-services

./: README.md  database-schema.sql  main.py  pyproject.toml  requirements.txt
src/: database.py  main.py
src/routes/: categories.py  cities.py  services.py  users.py
src/schemas/: categories.py  cities.py  services.py  users.py
src/utils/: storage.py
tests/: test_main.py
