[project]
name = "projeto-capacita"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.124.2",
    "supabase>=2.25.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["venv", ".venv", ".git"]
addopts = "--disable-warnings -v"
filterwarnings = ["ignore::DeprecationWarning"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
